[gd_scene load_steps=3 format=2]

[ext_resource path="res://GUI/volume_container.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="VolumeContainer" type="VBoxContainer"]
margin_right = 154.0
margin_bottom = 100.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 154.0
margin_bottom = 14.0
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="."]
margin_top = 18.0
margin_right = 154.0
margin_bottom = 34.0

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 38.0
margin_right = 154.0
margin_bottom = 58.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 20

[node name="Label2" type="Label" parent="."]
margin_top = 62.0
margin_right = 154.0
margin_bottom = 76.0
text = "Effects Volume"

[node name="EffectsSlider" type="HSlider" parent="."]
margin_top = 80.0
margin_right = 154.0
margin_bottom = 96.0
[connection signal="value_changed" from="MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="EffectsSlider" to="." method="_on_EffectsSlider_value_changed"]
